--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,14 +54,14 @@ Repository = "https://github.com/yourusername/autolife"
 Issues = "https://github.com/yourusername/autolife/issues"
 
 [project.scripts]
-autolife = "src.cli:main"
+autolife = "autolife.cli:main"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.setuptools.packages.find]
-where = ["src"]
+[tool.hatch.build.targets.wheel]
+packages = ["src/autolife"]
 
 [tool.ruff]
 line-length = 100
