feat(voice_agent): 实现音频录制和语音监听循环
- 新增 AudioRecorder 类支持定时和实时录音
- 完善 WakeWordDetector 的音频检测功能
- 实现 VoiceAgent 的语音监听循环
- 添加 python-dotenv 自动加载环境变量
- 更新文档和测试用例

新增测试文件 test_audio_recorder.py 和 test_mvp.py
更新 PROJECT_STRUCTURE.md 和 stage2-completion-report.md

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,12 +24,12 @@ dependencies = [
     "pillow>=12.0.0",
     # "pure-python-adb",  # 暂时注释,需要时手动安装
     # "opencv-python",
-
     # 语音相关
     # "zhipuai",  # 智谱 AI SDK (待正式发布)
-    "requests>=2.31.0",      # HTTP 请求（ASR/TTS API 调用）
-    "sounddevice>=0.4.6",    # 音频播放和录制
-    "soundfile>=0.12.1",     # 音频文件处理
+    "python-dotenv>=1.2.1",
+    "requests>=2.31.0", # HTTP 请求（ASR/TTS API 调用）
+    "sounddevice>=0.4.6", # 音频播放和录制
+    "soundfile>=0.12.1", # 音频文件处理
 ]
 
 [project.optional-dependencies]
