--- a/autolife-web/package.json
+++ b/autolife-web/package.json
@@ -14,6 +14,7 @@
     "@ant-design/x": "^2.1.1",
     "antd": "^6.1.1",
     "axios": "^1.13.2",
+    "jmuxer": "^2.1.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-resizable-panels": "^4.0.12",
