--- a/autolife-web/package.json
+++ b/autolife-web/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^6.1.0",
     "@ant-design/x": "^2.1.1",
+    "@ant-design/x-markdown": "^2.1.1",
     "antd": "^6.1.1",
     "axios": "^1.13.2",
     "jmuxer": "^2.1.0",
